--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@
 *.user
 *.userosscache
 *.sln.docstates
+*.atsuo
+*.cppproj
 
 # Build results
 [Dd]ebug/
@@ -18,6 +20,7 @@ build/
 bld/
 [Bb]in/
 [Oo]bj/
+[Vv]isual [Mm]icro/
 
 # Roslyn cache directories
 *.ide/
